{
    "name": "InputActions",
    "maps": [
        {
            "name": "FPV",
            "id": "85262d87-3cda-470a-a018-1482aea3fb96",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b6fbca7c-5df6-49e1-ab63-6cd9ff80e54e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCamera",
                    "type": "Value",
                    "id": "b5354137-79ca-4c0c-9f35-a9b5f9902918",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "990d2ea9-44b4-49d5-8414-9c3e5f1be62b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCamera",
                    "type": "Button",
                    "id": "99e78472-ef1f-4a7f-91ad-91c1fe4e6260",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "9cd723c6-abc0-4f07-970e-a1fc7698e9f9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1119038f-f069-4956-847f-786a56d8d9ee",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3a50e9ef-3bf0-44b8-af81-e1ec1dbf932b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f467084d-c68d-44ac-a7a6-d7b14854c0ef",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3663f57f-acdd-431d-a441-961e69f5c3dc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d7b7df75-8de8-46ce-9211-7dfa65845798",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67414e4d-eb6b-40df-b12e-da827f0e32f8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13d36c30-9382-4f8c-a464-e825045f935d",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Top-Down",
            "id": "769e8037-b798-435a-9e1d-afde285c0a7b",
            "actions": [
                {
                    "name": "KeyboardCameraMovement",
                    "type": "Value",
                    "id": "cfab4d47-57f7-446d-ab31-df879ef9dd41",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScreenEdgePanning",
                    "type": "Value",
                    "id": "42149a0f-314e-4e42-b309-60a2008d51dd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ClickAndDrag",
                    "type": "Button",
                    "id": "29f399b9-f17d-4c25-ab35-ceb884774b63",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomCamera",
                    "type": "Value",
                    "id": "6c077486-98db-4dbf-b085-228ec429aa8e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "b6a00bf1-82a5-4add-a045-cc250d387aae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCamera",
                    "type": "Button",
                    "id": "f0a3cafc-2418-4885-a70a-af4882de117c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WheelClick",
                    "type": "Button",
                    "id": "215430ce-9a84-45ca-b601-015895d4849b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "5d1080f0-1a61-4176-9bf6-e4603d3bd9ad",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardCameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "eabb9363-b8f9-4f6e-a7c1-1015d299bde3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardCameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e762a709-cd3a-48fa-bf9f-26b11ce7567d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardCameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d0f6aa15-98ca-4219-9328-23af5b9f1424",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardCameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f8d55e7e-dc00-4aa0-9952-3a40d1ef278b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardCameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "968bc627-58cd-42e6-8dfa-cf203c7aff30",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afc6d4e9-8d80-4dc1-89c4-26a59fbdc5fb",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c83bd80c-886b-4eb2-b8cb-57ac1cfc25bb",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenEdgePanning",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c840c0d2-eee8-40be-a61d-af1717ec742c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickAndDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab5f341e-8257-42f1-ad4f-7e02047a2172",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a07c2d94-3c14-4d1d-92d2-e06044a55a06",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WheelClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Isometric",
            "id": "9e2e56e4-eb88-45b1-b3bd-1a160902f751",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "41c269c8-bb0c-4bff-bee5-923bdda2ce24",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "b6ea6928-f18f-4bc1-a6ce-c0fcdcf13ec9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "2e6b0af4-1b11-4cc4-8495-30271496bb72",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCamera",
                    "type": "Button",
                    "id": "a96743d7-b5bf-4e14-9a99-88c73b0f9ba6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "79a27341-391f-4cb3-9539-492631ca0c28",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7ac9156e-d2fd-40ea-a517-e2d56559cf27",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b32d4dfc-791c-458f-aa08-e65a86f97146",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "45fcad4a-e572-4add-9cd3-1503d44e2067",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "886078ba-cb4c-4921-889d-7b03fbf4d197",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "12da11d6-6c20-4246-9b4e-4b3a1b328fc4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35be2daf-3671-477e-88c1-7d63acc7e65a",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9036dd3-ae9f-4c19-99de-ca39583d7a80",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}